<resources>
    <string name="app_name">Workout App</string>
    <string name="lats_Title">Select Your Training</string>
    <string name="check">Check</string>
    <string name="exercise">Exercise</string>
    <string name="load">Load</string>
    <string name="training_title">T R A I N I N G</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_title">R E G I S T E R</string>
    <string name="full_name">Full Name</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="training">T R A I N I N G</string>
    <string name="planner">Workout Planner</string>
    <string name="timer">Timer</string>
    <string name="log_out">Log out</string>
    <string name="add">Add</string>
    <string name="series">Series</string>
    <string name="create_your_exercise">Create Your Exercise</string>
    <string name="create">Create</string>
    <string name="_return">Return</string>
    <string name="my_evolution">My Evolution</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">log in</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="date">Date</string>
</resources>