<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    android:padding="20dp"
    tools:context=".exercises.Lats">

    <TableLayout
        android:id="@+id/training_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:stretchColumns="1,2,3"
        android:weightSum="7">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_column="1"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/series"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_column="2"
                android:layout_weight="3"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/exercise"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_column="3"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:text="@string/load"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </TableRow>

        <View
            android:id="@+id/div_line"
            android:layout_height="5dp"
            android:background="@color/app_orange" />

        <ListView
            android:id="@+id/lats_exercise_list"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginTop="15dp" />
    </TableLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/training_table"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/app_orange"
        android:text="@string/add" />
</RelativeLayout>